src/objects/Stripe__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Api_Key__c</fullName>
        <label>Api Key</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_Url__c</fullName>
        <label>Api Url</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_Version__c</fullName>
        <label>Api Version</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Api_Key__c</fullName>
        <label>Public Api Key</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stripe</label>
</CustomObject>